--- a/buyer.html
+++ b/buyer.html
@@ -1,451 +1,639 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PetalRush Buyer</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>PetalRush</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
 
-/* RESET */
-*{box-sizing:border-box;margin:0;padding:0}
+/* ---------- GLOBAL ---------- */
+
+*{
+box-sizing:border-box;
+margin:0;
+padding:0;
+}
 
 body{
-font-family:system-ui,-apple-system,Segoe UI,Roboto;
-background:#f4f6f8;
+font-family:system-ui;
+background:#f2f3f7;
 }
 
 /* CONTAINER */
+
 .container{
-max-width:520px;
+
+max-width:480px;
 margin:auto;
-background:#f4f6f8;
+background:white;
 min-height:100vh;
 position:relative;
-display:flex;
-flex-direction:column;
+
 }
 
 @media(min-width:700px){
+
 .container{
 margin-top:20px;
-border-radius:16px;
-box-shadow:0 0 30px rgba(0,0,0,0.15);
+margin-bottom:20px;
+border-radius:12px;
+box-shadow:0 0 25px rgba(0,0,0,0.15);
 }
+
 }
 
 /* HEADER */
+
 .header{
+
 background:white;
-padding:12px 16px;
-box-shadow:0 2px 12px rgba(0,0,0,0.08);
-position:sticky;
-top:0;
-z-index:100;
+padding:12px;
+display:flex;
+align-items:center;
+gap:10px;
+box-shadow:0 2px 10px rgba(0,0,0,0.1);
+
 }
 
 .logo{
-height:36px;
+height:40px;
 }
 
 .search{
-margin-top:10px;
+flex:1;
 }
 
 .search input{
+
 width:100%;
-padding:12px;
+padding:10px;
 border-radius:10px;
 border:1px solid #ddd;
-font-size:15px;
+
 }
 
 /* PRODUCTS */
+
 .products{
+
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-gap:12px;
-padding:12px;
-padding-bottom:90px;
+grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
+gap:10px;
+padding:10px;
+padding-bottom:80px;
+
 }
 
 .card{
+
 background:white;
 border-radius:12px;
 padding:10px;
-box-shadow:0 2px 10px rgba(0,0,0,0.08);
+box-shadow:0 2px 10px rgba(0,0,0,0.1);
+
 }
 
 .card img{
+
 width:100%;
 aspect-ratio:1/1;
 object-fit:cover;
 border-radius:10px;
-}
 
-.card h3{
-font-size:15px;
-margin-top:6px;
 }
 
 .price{
+
 color:#ff4081;
 font-weight:bold;
+
+}
+
+/* PROFILE */
+
+.section{
+display:none;
+padding:15px;
+padding-bottom:80px;
+}
+
+.profile-card{
+
+background:white;
+padding:15px;
+border-radius:12px;
+box-shadow:0 2px 10px rgba(0,0,0,0.1);
+text-align:center;
+
+}
+
+.avatar{
+
+width:90px;
+height:90px;
+border-radius:50%;
+object-fit:cover;
+margin-bottom:10px;
+
+}
+
+.input{
+
+width:100%;
+padding:10px;
+border-radius:8px;
+border:1px solid #ddd;
+margin-top:10px;
+
 }
 
 .btn{
+
 background:#ff4081;
 color:white;
 border:none;
 padding:10px;
 width:100%;
 border-radius:8px;
-margin-top:6px;
+margin-top:10px;
 cursor:pointer;
-}
 
-/* PROFILE */
-.section{
-display:none;
-padding:14px;
-padding-bottom:90px;
-}
-
-.profile-card{
-background:white;
-padding:15px;
-border-radius:12px;
-text-align:center;
-box-shadow:0 2px 10px rgba(0,0,0,0.08);
-}
-
-.avatar{
-width:90px;
-height:90px;
-border-radius:50%;
-object-fit:cover;
-margin-bottom:8px;
-}
-
-.input{
-width:100%;
-padding:12px;
-margin-top:8px;
-border-radius:8px;
-border:1px solid #ddd;
 }
 
 .menu{
+
+margin-top:10px;
 background:white;
-margin-top:12px;
 border-radius:12px;
-overflow:hidden;
+
 }
 
 .menu-item{
-padding:14px;
+
+padding:15px;
 border-bottom:1px solid #eee;
 cursor:pointer;
+
 }
 
-/* CART */
-.bill{
+/* ADDRESS */
+
+.address-card{
+
 background:white;
-padding:14px;
-border-radius:12px;
+padding:12px;
+border-radius:10px;
 margin-top:10px;
+
 }
 
 /* NAV */
+
 .bottom{
+
 position:fixed;
 bottom:0;
 width:100%;
-max-width:520px;
+max-width:480px;
 background:white;
 display:flex;
 justify-content:space-around;
-padding:12px 0;
-box-shadow:0 -3px 15px rgba(0,0,0,0.08);
+padding:10px;
+box-shadow:0 -2px 10px rgba(0,0,0,0.1);
+
 }
 
 .nav{
 cursor:pointer;
-font-size:14px;
-}
-
-.active{
-color:#ff4081;
-font-weight:bold;
 }
 
 </style>
+
 </head>
 
 <body>
 
 <div class="container">
 
-<!-- HEADER -->
 <div class="header">
+
 <img src="logoHeader.png" class="logo">
+
 <div class="search">
-<input id="searchInput" placeholder="Search flowers">
+<input placeholder="Search flowers"
+oninput="searchProducts(this.value)">
 </div>
+
 </div>
+
 
 <!-- HOME -->
+
 <div id="home" class="products"></div>
 
+
 <!-- PROFILE -->
+
 <div id="profile" class="section">
 
 <div class="profile-card">
 
-<img id="avatar" class="avatar" src="https://via.placeholder.com/90">
+<img id="avatar"
+class="avatar"
+src="https://via.placeholder.com/100">
 
-<input type="file" onchange="uploadAvatar(event)">
+<input type="file"
+onchange="uploadAvatar(event)">
 
-<h3 id="userEmail"></h3>
+<input id="nameInput"
+class="input"
+placeholder="Enter name">
 
-<input id="nameInput" class="input" placeholder="Enter name">
+<input id="phoneInput"
+class="input"
+placeholder="Enter phone">
 
-<button id="profileBtn" class="btn" onclick="saveProfile()">
+<button class="btn"
+onclick="saveProfile()">
 Save Profile
 </button>
 
 </div>
 
 <div class="menu">
-<div class="menu-item" onclick="openAddress()">My Address</div>
-<div class="menu-item" onclick="openHelp()">Help & Support</div>
-<div class="menu-item" onclick="logout()">Logout</div>
+
+<div class="menu-item"
+onclick="showAddress()">
+My Address
+</div>
+
+<div class="menu-item"
+onclick="showOrders()">
+My Orders
+</div>
+
+<div class="menu-item"
+onclick="showHelp()">
+Help & Support
+</div>
+
+<div class="menu-item"
+onclick="logout()">
+Logout
 </div>
 
 </div>
+
+</div>
+
 
 <!-- ADDRESS -->
+
 <div id="address" class="section">
-<h3>Save Address</h3>
-<input id="addressInput" class="input" placeholder="Enter address">
-<button class="btn" onclick="getGPS()">Use GPS</button>
-<button class="btn" onclick="saveAddress()">Save Address</button>
-<div id="savedAddress" style="margin-top:10px;color:green"></div>
+
+<h3>My Address</h3>
+
+<div id="addressList"></div>
+
+<input id="addressInput"
+class="input"
+placeholder="Enter address">
+
+<button class="btn"
+onclick="getGPS()">
+Use GPS
+</button>
+
+<button class="btn"
+onclick="saveAddress()">
+Save Address
+</button>
+
 </div>
+
+
+<!-- ORDERS -->
+
+<div id="orders" class="section">
+
+<h3>My Orders</h3>
+
+<div id="orderList"></div>
+
+</div>
+
 
 <!-- HELP -->
+
 <div id="help" class="section">
-<div class="bill">
-<h3>Support</h3>
-<p id="supportEmail"></p>
-<p id="supportPhone"></p>
-</div>
+
+<h3>Help</h3>
+
+<p id="adminEmail"></p>
+
+<p id="adminPhone"></p>
+
 </div>
 
-<!-- CART -->
-<div id="cart" class="section">
-<h3>Cart</h3>
-<div id="cartItems"></div>
-<div class="bill">
-<p>Subtotal: ₹<span id="subTotal">0</span></p>
-<p>GST (5%): ₹<span id="gst">0</span></p>
-<p>Delivery: ₹<span id="delivery">30</span></p>
-<hr>
-<h3>Total: ₹<span id="total">0</span></h3>
-</div>
-</div>
 
 <!-- NAV -->
+
 <div class="bottom">
-<div class="nav active" onclick="showHome()">Home</div>
-<div class="nav" onclick="showProfile()">Profile</div>
-<div class="nav" onclick="showCart()">Cart</div>
+
+<div class="nav"
+onclick="showHome()">Home</div>
+
+<div class="nav"
+onclick="showProfile()">Profile</div>
+
+<div class="nav"
+onclick="showOrders()">Orders</div>
+
 </div>
+
 
 </div>
 
 <script>
 
-/* SUPABASE */
 const SUPABASE_URL="https://lssjsgfppehhclxqulso.supabase.co";
 const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0";
-const client=supabase.createClient(SUPABASE_URL,SUPABASE_KEY);
 
-/* USER */
+const client=supabase.createClient(
+SUPABASE_URL,
+SUPABASE_KEY
+);
+
 const user=JSON.parse(localStorage.getItem("user"));
-if(!user){location="index.html";}
-document.getElementById("userEmail").innerText=user.email;
 
-/* NAVIGATION */
+if(!user){
+location="index.html";
+}
+
+/* SHOW SECTIONS */
+
 function hideAll(){
+
 home.style.display="none";
 profile.style.display="none";
-cart.style.display="none";
 address.style.display="none";
+orders.style.display="none";
 help.style.display="none";
+
 }
 
 function showHome(){
+
 hideAll();
 home.style.display="grid";
+
 }
 
 function showProfile(){
+
 hideAll();
 profile.style.display="block";
 loadProfile();
+
 }
 
-function showCart(){
-hideAll();
-cart.style.display="block";
-updateBill();
-}
+function showAddress(){
 
-function openAddress(){
 hideAll();
 address.style.display="block";
 loadAddress();
+
 }
 
-function openHelp(){
+function showOrders(){
+
+hideAll();
+orders.style.display="block";
+loadOrders();
+
+}
+
+function showHelp(){
+
 hideAll();
 help.style.display="block";
-loadSupport();
+loadAdmin();
+
 }
 
 /* PRODUCTS */
+
 async function loadProducts(){
-const {data}=await client.from("products").select("*");
-const div=document.getElementById("home");
-div.innerHTML="";
+
+const {data}=await client
+.from("products")
+.select("*");
+
+home.innerHTML="";
+
 data.forEach(p=>{
-div.innerHTML+=`
+
+home.innerHTML+=`
+
 <div class="card">
+
 <img src="${p.image_url}">
-<h3>${p.name}</h3>
-<div class="price">₹${p.price}</div>
-<button class="btn" onclick='addToCart(${JSON.stringify(p)})'>Add</button>
+
+<div>${p.name}</div>
+
+<div class="price">
+₹${p.price}
 </div>
+
+</div>
+
 `;
+
 });
+
 }
+
 loadProducts();
 
-/* SEARCH */
-searchInput.addEventListener("input",async function(){
-const val=this.value;
-const {data}=await client.from("products")
-.select("*")
-.ilike("name",`%${val}%`);
-home.innerHTML="";
-data.forEach(p=>{
-home.innerHTML+=`
-<div class="card">
-<img src="${p.image_url}">
-<h3>${p.name}</h3>
-<div class="price">₹${p.price}</div>
-<button class="btn" onclick='addToCart(${JSON.stringify(p)})'>Add</button>
-</div>`;
-});
+function searchProducts(text){
+
+const cards=document.querySelectorAll(".card");
+
+cards.forEach(c=>{
+
+c.style.display=
+c.innerText.toLowerCase().includes(text.toLowerCase())
+?"block":"none";
+
 });
 
-/* PROFILE */
-async function loadProfile(){
-const {data}=await client.from("users")
-.select("*").eq("email",user.email).single();
-if(data){
-if(data.name) nameInput.value=data.name;
-if(data.avatar_url) avatar.src=data.avatar_url;
-profileBtn.innerText="Update Profile";
 }
+
+/* PROFILE */
+
+async function loadProfile(){
+
+const {data}=await client
+.from("users")
+.select("*")
+.eq("email",user.email)
+.single();
+
+if(data){
+
+nameInput.value=data.name||"";
+phoneInput.value=data.phone||"";
+
+if(data.avatar_url){
+avatar.src=data.avatar_url;
+}
+
+}
+
 }
 
 async function saveProfile(){
+
 const name=nameInput.value;
-const avatarUrl=avatar.src;
-await client.from("users")
-.upsert({email:user.email,name:name,avatar_url:avatarUrl});
-alert("Profile Saved");
-profileBtn.innerText="Update Profile";
+const phone=phoneInput.value;
+
+await client
+.from("users")
+.update({name,phone})
+.eq("email",user.email);
+
+alert("Saved");
+
 }
 
 async function uploadAvatar(e){
+
 const file=e.target.files[0];
-const fileName=user.email+".png";
-await client.storage.from("avatars")
-.upload(fileName,file,{upsert:true});
-const url=SUPABASE_URL+
-"/storage/v1/object/public/avatars/"+fileName+
-"?t="+new Date().getTime();
+
+await client.storage
+.from("avatars")
+.upload(user.email,file,{upsert:true});
+
+const url=
+SUPABASE_URL+
+"/storage/v1/object/public/avatars/"+user.email;
+
 avatar.src=url;
+
+await client
+.from("users")
+.update({avatar_url:url})
+.eq("email",user.email);
+
 }
 
 /* ADDRESS */
+
 async function saveAddress(){
-const addr=addressInput.value;
-await client.from("users")
-.update({address:addr})
-.eq("email",user.email);
-alert("Address saved");
+
+await client.from("addresses")
+.insert({
+user_email:user.email,
+address:addressInput.value
+});
+
 loadAddress();
+
 }
 
 async function loadAddress(){
-const {data}=await client.from("users")
-.select("address")
-.eq("email",user.email)
-.single();
-if(data && data.address){
-savedAddress.innerText="Saved: "+data.address;
-}
+
+const {data}=await client
+.from("addresses")
+.select("*")
+.eq("user_email",user.email);
+
+addressList.innerHTML="";
+
+data.forEach(a=>{
+
+addressList.innerHTML+=`
+
+<div class="address-card">
+
+${a.address}
+
+</div>
+
+`;
+
+});
+
 }
 
 function getGPS(){
+
 navigator.geolocation.getCurrentPosition(pos=>{
+
 addressInput.value=
-`https://maps.google.com/?q=${pos.coords.latitude},${pos.coords.longitude}`;
+"https://maps.google.com/?q="+
+pos.coords.latitude+
+","+pos.coords.longitude;
+
 });
+
 }
 
-/* SUPPORT */
-async function loadSupport(){
-const {data}=await client.from("admin").select("*").single();
-supportEmail.innerText="Email: "+data.email;
-supportPhone.innerText="Phone: "+data.phone;
-}
+/* ORDERS */
 
-/* CART */
-let cartData=[];
+async function loadOrders(){
 
-function addToCart(p){
-cartData.push(p);
-alert("Added to cart");
-}
+const {data}=await client
+.from("orders")
+.select("*")
+.eq("user_email",user.email);
 
-function updateBill(){
-let sub=0;
-cartItems.innerHTML="";
-cartData.forEach(p=>{
-sub+=Number(p.price);
-cartItems.innerHTML+=`
-<p>${p.name} - ₹${p.price}</p>
+orderList.innerHTML="";
+
+data.forEach(o=>{
+
+orderList.innerHTML+=`
+
+<div class="address-card">
+
+₹${o.total} — ${o.status}
+
+</div>
+
 `;
+
 });
-let gst=sub*0.05;
-let delivery=30;
-let total=sub+gst+delivery;
-subTotal.innerText=sub.toFixed(2);
-gst.innerText=gst.toFixed(2);
-total.innerText=total.toFixed(2);
+
+}
+
+/* ADMIN */
+
+async function loadAdmin(){
+
+const {data}=await client
+.from("admin")
+.select("*")
+.single();
+
+adminEmail.innerText=data.email;
+adminPhone.innerText=data.phone;
+
 }
 
 /* LOGOUT */
+
 function logout(){
+
 localStorage.removeItem("user");
 location="index.html";
+
 }
+
+/* START */
 
 showHome();
 
